prima creazione login con template drivenForm e utilizzo Route Guard

--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -1,1 +1,9 @@
-<p>menu works!</p>
+
+        <ul>
+            <li><a routerLink="/home">home</a></li>
+            <li><a routerLink="/gameList">lista </a></li>
+            <li><a routerLink="/editGame">modifica</a></li>
+         
+        </ul>
+
+
